Add PWA dependencies and gh page publishing

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="manifest" href="manifest.json" />
     <title>SOAK What Where When</title>
   </head>
   <body>
