Add favicon.svg and robots.txt
* robots.txt allows all. Same as no robots.txt, but allows for quick
  changes

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="manifest" href="manifest.json" />
+    <link rel="icon" href="favicon.svg" />
     <title>SOAK What Where When</title>
   </head>
   <body>
