--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="manifest" href="manifest.json" />
     <link rel="icon" href="favicon.svg" />
+    <link rel="apple-touch-icon" href="favicon.svg" />
     <title>SOAK What Where When</title>
   </head>
   <body>
