--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<!DOCTYPE html><html lang="en"><head><link rel="stylesheet" href="SOAK-WWW.f9a95d75.css"><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="manifest" href="manifest.webmanifest"><link rel="icon" href="favicon.svg"><title>SOAK What Where When</title></head><body> <div id="app"></div> <script type="module" src="SOAK-WWW.a58e5fd5.js"></script><script src="SOAK-WWW.f96a3c24.js" nomodule defer></script> </body></html>
+<!DOCTYPE html><html lang=en><link rel=stylesheet href=SOAK-WWW.8cf48382.css><meta name=viewport content="width=device-width, initial-scale=1"><link rel=manifest href=manifest.webmanifest><link rel=icon href=favicon.svg><link rel=apple-touch-icon href=favicon.svg><title>SOAK What Where When</title><body>
+    <div id=app></div>
+    <script type=module src=SOAK-WWW.eb0107d2.js></script>
+  
+
